// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageContainer > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiStack-root css-1pj1j6w-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1rr4qq7"
          />
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot on loading state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiStack-root css-1pj1j6w-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
            />
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
            />
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with buttons 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiStack-root css-1pj1j6w-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1rr4qq7"
          >
            <h1
              class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
            >
              description
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiStack-root css-ku676e-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        />
        <div
          class="MuiStack-root css-niqf4j-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            2
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with description 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiStack-root css-1pj1j6w-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1rr4qq7"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
            >
              description
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with title 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiStack-root css-1pj1j6w-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1rr4qq7"
          >
            <h1
              class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
            >
              title
            </h1>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with title and description 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiStack-root css-1pj1j6w-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1rr4qq7"
          >
            <h1
              class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
            >
              description
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainerSkeleton > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiStack-root css-zayqnb-MuiStack-root"
      />
      <div
        class="MuiStack-root css-1pj1j6w-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
            />
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
            />
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-164r41r"
      />
    </div>
  </div>
</body>
`;
